# esri_gis_mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_READY.md  LICENSE  README.md  SECURITY.md  deploy_production.sh  install.py  mcp-config.json  package.json  pyproject.toml  requirements.txt  setup.py  start_server.bat  start_server.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main_func-ethekwini-gis-mcp.yml  release.yml
azure_function/: README.md  deploy.bat  deploy.sh  function_app.py  local.settings.json  requirements.txt  test_function.py
examples/: usage_examples.py
src/: ethekwini_gis_mcp.py
tests/: test_mcp_server.py
